--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Code Challenge</string>
     <string name="movie_and_genres">%s - %s</string>
+    <string name="movie_backdrop_image_description">Movie Backdrop Image</string>
+    <string name="movie_poster_image_description">Movie Poster Image</string>
 </resources>
